<resources>
    <string name="app_name">UMNStory</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_button_text">Login</string>
    <string name="google_sign_in_text">Sign in with Google</string>
    <string name="register_prompt">Don\'t have an account?</string>
    <string name="register_button_text">Register</string>
    <string name="name_hint">Name</string>
    <string name="nim_hint">NIM</string>
    <string name="save_button_text">Save</string>
    <string name="story_text_hint">Write your story here...</string>
    <string name="add_image">Add Image</string>
    <string name="post_story">Post Story</string>
    <string name="story_image_description">Story Image</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_add_story">Add Story</string>
    <string name="profile_picture_description">Profile Picture</string>
    <string name="logout_button_text">Logout</string>
    <string name="register_title">Register</string>
    <string name="back_to_login_text">Already have an account? Login</string>
    <string name="login_title">Login</string>
    <string name="user_info_title">User Information</string>

</resources>
